@@ -9,6 +9,7 @@
     Bug #15077 Error MySqlCommandBuilder.DeriveParameters for sp without parameters. [fixed]
     Bug #16934 Unsigned values > 2^63 (UInt64) cannot be used in prepared statements
 	Bug #19515 DiscoverParameters fails on numeric datatype [fixed]
+    Bug #17814 Stored procedure fails unless DbType set explicitly
 	
 x-xx-05 - Version 1.0.7
 
